score section css pretty much done

--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
     <h1 class='text-center mt-4 mb-4' >Welcome to a Simple RPS. Good ol fashion Rock, Paper, Scissors.</h1>
 
    <main>
-    <section id="scoreSection"></section>
-    <section id="resultsSection"></section>
+    <section id="scoreSection">
+
+    </section>
+    <section id="resultsSection">
+        <div class="row">
+            <div class="column">
+              <h2>Player Score</h2>
+              <p>Some text..</p>
+            </div>
+            <div class="column">
+              <h2>CPU Score</h2>
+              <p>Some text..</p>
+            </div>
+            <div class="column">
+              <h2>Ties</h2>
+              <p>Some text..</p>
+            </div>
+          </div>
+    </section>
     <section id="buttonSection"> </section>
    </main>
 
