--- a/index.html
+++ b/index.html
@@ -11,25 +11,37 @@
 
    <main>
     <section id="scoreSection">
-
-    </section>
-    <section id="resultsSection">
-        <div class="row">
-            <div class="column">
+        <div class="score-row">
+            <div class="score-column">
               <h2>Player Score</h2>
               <p>Some text..</p>
             </div>
-            <div class="column">
+            <div class="score-column">
               <h2>CPU Score</h2>
               <p>Some text..</p>
             </div>
-            <div class="column">
+            <div class="score-column">
               <h2>Ties</h2>
               <p>Some text..</p>
             </div>
           </div>
     </section>
-    <section id="buttonSection"> </section>
+    <section id="resultsSection">
+        
+    </section>
+    <section id="buttonSection"> 
+        <div class="button-row">
+            <div class="button-column">
+                <img src="/assests/images/rock.png" alt="scissors">
+            </div>
+            <div class="button-column">
+                <img src="/assests/images/paper.png" alt="scissors">
+            </div>
+            <div class="button-column">
+              <img src="/assests/images/scissors.png" alt="scissors">
+            </div>
+          </div>
+    </section>
    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
