--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class='text-center mt-4 mb-4' >Welcome to a Simple RPS. Good ol fashion Rock, Paper, Scissors.</h1>
 
-   <main>
+ 
     <section id="scoreSection">
         <div class="score-row">
             <div class="score-column">
@@ -26,9 +26,13 @@
             </div>
           </div>
     </section>
+
     <section id="resultsSection">
-        
+        <div class="results-row">
+            <div class="results-column"></div>
+        </div>
     </section>
+
     <section id="buttonSection"> 
         <div class="button-row">
             <div class="button-column">
@@ -42,7 +46,7 @@
             </div>
           </div>
     </section>
-   </main>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
