added google font

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/assests/style.css">
     <title>Bootstrap demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 class='text-center mt-4 mb-4' >Welcome to a Simple RPS. Good ol fashion Rock, Paper, Scissors.</h1>
+    <h1 class='text-center mt-4 mb-4' >Welcome to a Simple RPS. Good 'ol fashion Rock, Paper, Scissors.</h1>
 
  
     <section id="scoreSection">
@@ -47,6 +50,7 @@
           </div>
     </section>
 
+    <footer style="text-align:center;font-family:arial;margin-bottom:25px;">Created with ❣️By YLCdev</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
