I believe the CSS is complete!

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <div class="score-row">
             <div class="score-column">
               <h2>Player Score</h2>
-              <p>Some text..</p>
+              <p>8</p>
             </div>
             <div class="score-column">
               <h2>CPU Score</h2>
-              <p>Some text..</p>
+              <p>10</p>
             </div>
             <div class="score-column">
               <h2>Ties</h2>
-              <p>Some text..</p>
+              <p>6</p>
             </div>
           </div>
     </section>
 
     <section id="resultsSection">
         <div class="results-row">
-            <div class="results-column"></div>
+            <div class="results-column">Player 1 Wins!</div>
         </div>
     </section>
 
