--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
     </section>
 
-    <footer style="text-align:center;font-family:arial;margin-bottom:25px;">Created with ❣️By YLCdev</footer>
+    <footer style="text-align:center;font-family:arial;margin-bottom:25px;font-weight:bold;">Created with ❣️By YLCdev</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
