--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <section id="buttonSection"> 
         <div class="button-row">
             <div class="button-column">
-                <img src="/assests/images/rock.png" alt="scissors">
+                <img class='imgBtn' src="/assests/images/rock.png" alt="rock" name="rock">
             </div>
             <div class="button-column">
-                <img src="/assests/images/paper.png" alt="scissors">
+                <img class='imgBtn' src="/assests/images/paper.png" alt="paper" name="paper">
             </div>
             <div class="button-column">
-              <img src="/assests/images/scissors.png" alt="scissors">
+              <img class='imgBtn' src="/assests/images/scissors.png" alt="scissors" name="scissors">
             </div>
           </div>
     </section>
@@ -53,5 +53,6 @@
     <footer style="text-align:center;font-family:arial;margin-bottom:25px;font-weight:bold;">Created with ❣️By YLCdev</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
