--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1 class='text-center mt-4 mb-4' >Welcome to a Simple RPS. Good 'ol fashion Rock, Paper, Scissors.</h1>
+    <h1 class='text-center mt-4 mb-4' >Welcome to <span style="color:lightgreen;">Simple RPS</span>. Good 'ol fashion Rock, Paper, Scissors.</h1>
 
  
     <section id="scoreSection">
