slight bug, fixed, and game logic works, need to create reset button and loading on each rps game until user gets to 10

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <div class="score-row">
             <div class="score-column">
               <h2>Player Score</h2>
-              <p>8</p>
+              <p id="p1"></p>
             </div>
             <div class="score-column">
               <h2>CPU Score</h2>
-              <p>10</p>
+              <p id="cpu"></p>
             </div>
             <div class="score-column">
               <h2>Ties</h2>
-              <p>6</p>
+              <p id="tie"></p>
             </div>
           </div>
     </section>
 
     <section id="resultsSection">
         <div class="results-row">
-            <div class="results-column">Player 1 Wins!</div>
+            <div class="results-column"></div>
         </div>
     </section>
 
