more adjustments to file paths

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
     <section id="buttonSection"> 
         <div class="button-row">
             <div class="button-column">
-                <img class='imgBtn' src="/assests/images/rock.png" alt="rock" name="rock">
+                <img class='imgBtn' src="assests/images/rock.png" alt="rock" name="rock">
             </div>
             <div class="button-column">
-                <img class='imgBtn' src="/assests/images/paper.png" alt="paper" name="paper">
+                <img class='imgBtn' src="assests/images/paper.png" alt="paper" name="paper">
             </div>
             <div class="button-column">
-              <img class='imgBtn' src="/assests/images/scissors.png" alt="scissors" name="scissors">
+              <img class='imgBtn' src="assests/images/scissors.png" alt="scissors" name="scissors">
             </div>
           </div>
     </section>
 
     <footer style="text-align:center;font-family:arial;margin-bottom:25px;font-weight:bold;">Created with ❣️By YLCdev</footer>
 
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
