game logic complete, last step is to make page responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1 class='text-center mt-4 mb-4' >Welcome to <span style="color:lightgreen;">Simple RPS</span>. Good 'ol fashion Rock, Paper, Scissors.</h1>
-
+    <p id="rules">First to 10 wins!</p>
  
     <section id="scoreSection">
         <div class="score-row">
